<resources>
    <string name="app_name">企业管理</string>
    <string name="main_home">首页</string>
    <string name="main_manage">管理</string>
    <string name="main_finance">财务</string>
    <string name="main_human">人力</string>
    <string name="main_business">商务</string>


    <!--2018/7/30 yq-->
    <string name="task_homepage_title">任务管理</string>
    <string name="task_manage_assist">项管协调</string>
    <string name="task_assisit_detail">协调任务详情</string>
    <string name="task_nomore_progress">暂无最新进展</string>
    <string name="task_textview_expectime">预计完成时间：</string>
    <string name="task_textview_content">输入进展信息：</string>




    <!--2018/07/31 wl-->
    <string name="project_task_list_title">周例会列表</string>
    <string name="project_task_list_detail">周例会项目任务</string>
</resources>
